# D4CleaningStudio

./: .prettierrc  debug-tab-persistence.md  package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx
src-tauri/: 2  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  store_manager.rs  system_monitor.rs
src/components/Dialog/: NewProjectDialog.jsx
src/components/FlowEditor/: CustomSimpleNode.jsx  FlowEditor.jsx  InputFile_csv.jsx
src/components/GitHubPanel/: GitHubPanel.jsx
src/components/MainContent/: Icons.jsx  mainContent.jsx
src/components/MainContent/FlowEditor/: CustomNodes.jsx  CustomSimpleNode.jsx  FlowEditor.jsx  FlowEditorInner.jsx.backup  FlowEditorToolbar.jsx  InputFile_csv.jsx  ShapeIcons.jsx  ShapeNode.jsx  icons.jsx
src/components/MainContent/ProjectTree/: ProjectTree.jsx  icons.jsx
src/components/MainContent/TabSystem/: TabContainer.jsx  TabContent.jsx  TabHeader.jsx
src/components/MainContent/Welcome/: Welcome.jsx
src/components/Menu/: Menu.jsx
src/components/ProjectInfoDialog/: ProjectInfoDialog.jsx
src/components/ProjectTree/: ConfirmDialog.jsx  FolderContextMenu.jsx  ProjectTree.jsx  ToolButton.jsx  TreeItemComponent.jsx  constants.js  icons.js  useDragAndDrop.jsx  useProjectTree.js
src/components/Statusbar/: statusbar.jsx
src/components/WindowTitlebar/: windowTitlebar.jsx
src/config/: debugConfig.js
src/utils/: ConsoleMsg.js  DebugConfig.js  GitHubManager.js  StoreManager.js  fontSizeManager.js  windowManager.js
(+28 files in other folders)
